--- a/style.css
+++ b/style.css
@@ -1,13 +1,232 @@
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-  }
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap");
 
-h1{
-    text-align: center;
-}
-body{
-    background-color: #ffffff;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+body {
+  font-family: poppins;
+  margin: 0;
+  padding: 0;
+  background-image: linear-gradient(#626b6b, #2e3131, #0b0c0c);
+}
+.navbar {
+  background-color: #2E4F4F;
+  font-family: "oswald", sans-serif;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
+
+.navbar-brand img {
+  width: 70px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar h1 {
+  font-family: poppins;
+  font-size: 10px;
+  color: #ffffff;
+  margin-top: 5px;
+  display: flex;
+  
+  justify-content: center;
+  
+}
+
+.navbar a {
+  text-decoration: none;
+  font-family: oswald;
+  font-size: 30px;
+  color: #ffffff;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+
+}
+
+.productos {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.carrito {
+  border: 1px solid #ccc;
+  padding: 10px;
+  background-image: linear-gradient(#626b6b, #2e3131, #0b0c0c);
+  
+}
+
+.carrito-lista {
+  list-style: none;
+  padding: 0;
+}
+
+.carrito-lista li {
+  margin-bottom: 5px;
+}
+body {
+  font-family: poppins;
+  margin: 0;
+  padding: 0;
+  
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+
+}
+
+.productos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 2fr));
+  gap: 20px;
+  margin-bottom: 30px;
+  background-image: linear-gradient(#626b6b, #2e3131, #0b0c0c);
+}
+
+.producto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; 
+  border: 1px solid #848484;
+  padding: 20px;
+  text-align: center;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.producto img {
+  max-width: 200px;
+  max-height: 150px;
+  margin-bottom: 10px;
+}
+.agregar-carrito {
+  display: block;
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #2e4f4f;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.carrito {
+  text-align: center;
+  border: 1px solid #ccc;
+  padding: 20px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.carrito h2 {
+  font-family: oswald;
+  text-align: center;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+.carrito-lista {
+  list-style: none;
+  padding: 0;
+}
+
+.carrito-lista li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  padding: 5px;
+  border-bottom: 1px solid #ccc;
+  color: #fff;
+}
+.carrito-lista li .miniatura {
+  max-width: 40px;
+  max-height: 40px;
+  margin-right: 10px;
+}
+
+.eliminar-producto {
+  color: #ff0019;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+#total {
+  font-family: poppins;
+}
+
+#finalizar-compra {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: 270px;
+  padding: 10px 20px;
+  background-color:#2e4f4f;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+
+footer {
+  background-color: #2e4f4f;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  margin-top: 25px;
+}
+
+.redes-sociales {
+  display: flex;
+  flex-direction: 0;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  margin-top: 10px;
+}
+
+.redes-sociales a i {
+  font-family: 0;
+  font-size: 30px;
+  color: #ffffff;
+  width: 100px;
+  height: 100px;
+}
+
+.disclaimer {
+  font-family: poppins;
+  font-size: 15px;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 10px;
+  font-weight: 600;
+  text-decoration: underline;
+  font-style: italic;
+}
+
+input {
+  
+  width: 70px;
+}
+
+p{
+  color: #fff;
+}
